--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="page">
   <main class="main container">
     <section class="header">
-        <a class="header__link button" href="modal.html" target="_blank">Open pop-up button</a>
+        <a class="header__link button" href="modal.html">Open pop-up button</a>
       </div>
     </section>
     <section class="big-blocks">
