--- a/index.html
+++ b/index.html
@@ -1,64 +1,72 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-  <head>
-    <meta charset="utf-8" />
-    <title>NodaSoft</title>
-    <meta name="description" content="test" />
-    <meta name="keywords" content="test" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="preload" href="style.css" as="style" />
-    <link rel="preload" href="fonts/Rajdhani.woff2" as="font" />
-    <link rel="preload" href="fonts/Rajdhani.woff" as="font" />
-    <link rel="stylesheet" href="style.css" />
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <title>NodaSoft</title>
+  <meta name="description" content="test" />
+  <meta name="keywords" content="test" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="preload" href="style.css" as="style" />
+  <link rel="preload" href="fonts/Rajdhani.woff2" as="font" />
+  <link rel="preload" href="fonts/Rajdhani.woff" as="font" />
+  <link rel="stylesheet" href="style.css" />
+</head>
 
 <body class="page">
-  <main class="main container">
-    <section class="header">
-        <a class="header__link button" href="modal.html">Open pop-up button</a>
+  <header class="header">
+    <div class="container">
+      <a class="header__link button" href="modal.html">Open pop-up button</a>
+    </div>
+  </header>
+  <main class="page-content">
+    <section class="big-blocks">
+      <div class="container">
+        <ul class="big-blocks__list">
+          <li class="big-blocks__item">
+            <svg height="62" width="30">
+              <text transform="scale(1 1)" x="5" y="40" font-size="40" font-weight="500" fill="#fff">1</text>
+            </svg>
+          </li>
+          <li class="big-blocks__item">
+            <svg height="62" width="30">
+              <text transform="scale(1 1)" x="5" y="40" font-size="40" font-weight="500" fill="#fff">2</text>
+            </svg>
+          </li>
+          <li class="big-blocks__item">
+            <svg height="62" width="30">
+              <text transform="scale(1 1)" x="5" y="40" font-size="40" font-weight="500" fill="#fff">3</text>
+            </svg>
+          </li>
+          <li class="big-blocks__item">
+            <svg height="62" width="30">
+              <text transform="scale(1 1)" x="5" y="40" font-size="40" font-weight="500" fill="#fff">4</text>
+            </svg>
+          </li>
+          <li class="big-blocks__item">
+            <svg height="62" width="30">
+              <text transform="scale(1 1)" x="5" y="40" font-size="40" font-weight="500" fill="#fff">5</text>
+            </svg>
+          </li>
+        </ul>
       </div>
     </section>
-    <section class="big-blocks">
-      <ul class="big-blocks__list">
-        <li class="big-blocks__item">
-          <svg height="62" width="30">    
-            <text transform="scale(1 1)" x="5" y="40" font-size="40" font-weight="500" fill="#fff">1</text>
-          </svg>
-        </li>
-        <li class="big-blocks__item">
-          <svg height="62" width="30">    
-            <text transform="scale(1 1)" x="5" y="40" font-size="40" font-weight="500" fill="#fff">2</text>
-          </svg>
-        </li>
-        <li class="big-blocks__item">
-          <svg height="62" width="30">    
-            <text transform="scale(1 1)" x="5" y="40" font-size="40" font-weight="500" fill="#fff">3</text>
-          </svg>
-        </li>
-        <li class="big-blocks__item">
-          <svg height="62" width="30">    
-            <text transform="scale(1 1)" x="5" y="40" font-size="40" font-weight="500" fill="#fff">4</text>
-          </svg>
-        </li>
-        <li class="big-blocks__item">
-          <svg height="62" width="30">    
-            <text transform="scale(1 1)" x="5" y="40" font-size="40" font-weight="500" fill="#fff">5</text>
-          </svg>
-        </li>
-      </ul>
-    </section>
     <section class="small-blocks">
-      <ul class="small-blocks__list">
-        <li class="small-blocks__item"></li>
-        <li class="small-blocks__item"></li>
-        <li class="small-blocks__item"></li>
-        <li class="small-blocks__item"></li>
-      </ul>
+      <div class="container">
+        <ul class="small-blocks__list">
+          <li class="small-blocks__item"></li>
+          <li class="small-blocks__item"></li>
+          <li class="small-blocks__item"></li>
+          <li class="small-blocks__item"></li>
+        </ul>
+      </div>
     </section>
-    <section class="footer">
-    </section>
-
   </main>
+  <footer class="footer">
+    <div class="container">
+    </div>
+  </footer>
+
 </body>
+
 </html>
